Fix MAIN anchor link offset when sticky-nav, fix list spacing

--- a/_sass/default/elements/_list.sass
+++ b/_sass/default/elements/_list.sass
@@ -5,18 +5,20 @@ ul
     padding-left: $space*2
 
 //
-// MAIN lists
+// Main lists
 // --------------------------------------
 main li
   margin-bottom: $space/3
-  
+footer li
+    margin-bottom: 0
+
 //
 // SIDEBAR lists
 // --------------------------------------
 .sidebar
   ul
     list-style-type: none
-    padding-left: $space*1.5
+    padding-inline: $space*1
 
 dl
   dt
